# athena

./: .gitignore  README.md  main.py  pyproject.toml
dummy-data/: corpus-test.0.json  corpus-test.1.json
scraper/: crawler.py  scraper.py
src/athena/: __init__.py
src/athena/architecture/: llm_interface.py  utilities.py
src/athena/architecture/transformers/: __init__.py  optimized_transformer.py  original_transformer.py
src/athena/scraper/: __init__.py  crawler.py  utilities.py
src/athena/tokenizer/: __init__.py  tokenizer.py  utilities.py
tests/: test_crawler.py  test_tokenizer.py
tokenizer/: tester.py  tokenizer.py
