[build-system]
requires    = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name         = "athena"
version      = "0.1.0"
description  = "Athena is an LLM trained on Wikipedia"
readme       = "README.md"
authors      = [
    { name = "David Budziwojski" },
    { name = "Oliver Cai" }
]
dependencies = [
  "requests>=2.0",
  "beautifulsoup4>=4.9.0",
  "tokenizer>=0.1.0"
]
classifiers  = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
[project.urls]
Homepage = "https://github.com/dsbudziwojski/athena"
